# VPTree

./: .gitignore  .readthedocs.yaml  Distance.cpp  Distance.h  LICENSE  Point.cpp  Point.h  README.md  Test.cpp  VPTree.cpp  VPTree.cpp~  VPTree.h  bb  compilecode.csh  gpm_engine.pxd  gpm_engine.pxd~  gpm_engine.py  gpm_engine.pyx  gpm_engine.pyx~  logs  meson.build  meson.build~  point.pyx  pyproject.toml  setup.py  test_gpm_current.py  test_gpm_multi.py  vptree.pdx  vptree.pxd  vptree.pxd~  vptree.pyx  vptree.pyx~
.github/workflows/: ci.yml
.vennv/: pyvenv.cfg
cython/: vptree.pyx
docs/source/: api.rst  conf.py  index.rst
include/: Distance.h  Distance.h~  Parallax.h  Parallax.h~  Point.h  Point.h~  VPTree.h  VPTree.h~  compile.sh~  gpm_eytz_engine.hpp  gpm_eytz_engine.hpp~  gpm_sorted_engine.hpp  gpm_sorted_engine.hpp~
purec++/: Distance.cpp  Distance.h  Makefile  Point.cpp  VPTree.cpp  VPTree.h
pythonTest/: pp.py  pp.py~  test_gpm_multi.py  test_gpm_multi.py~  testcat.py  vptree-1.1.1.tar  vptree.py  vptree.py~
pythonTest/vptree-1.1.1/: LICENSE.txt  PKG-INFO  README.rst  setup.py  vptree.py
pythonTest/vptree-1.1.1/vptree.egg-info/: SOURCES.txt  top_level.txt
src/: VPTree.cpp  gpm_engine_wrapper.cpp  vptree_wrapper.cpp
tests/: test_gpm_multi.py
